# B4Build

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  ai_build_advisor_phased_plan_99571e1b.plan.md  amplify.yml
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: __init__.py  database_url.py  logging_config.py  main.py  settings.py  store.py  tracing_env.py
backend/src/api/: chat.py  export.py  health.py  plan.py
backend/src/db/: __init__.py  bootstrap.py  models.py  session.py
backend/src/db/repositories/: __init__.py  agent_outputs.py  conversations.py  plans.py  spend.py  users.py
backend/src/graph/: __init__.py  builder.py  phase_ids.py  state.py
backend/src/graph/nodes/: __init__.py  chat_responder.py  conversation_handler.py  (+5 more)
backend/src/llm/: __init__.py  client.py  pricing.py  usage_context.py
backend/src/prompts/: __init__.py  _shared.py  coordinator.py  intent.py  phase_0_pressure_test.py  phase_1_problem_model_fit.py  phase_2_architecture.py  phase_3_open_source_scouting.py  phase_4_infrastructure.py  phase_5_cost_model.py  phase_6_25_security.py  phase_6_5_observability.py  phase_7_scaling.py  red_team.py  synthesizer.py  token_budget.py
backend/src/schemas/: __init__.py  chat.py  intake.py  mermaid_sanitize.py  phases.py  plan.py
backend/src/services/: __init__.py  checkpointing.py  diff_engine.py  pdf.py  rate_limit.py  spend_ledger.py  urls.py
backend/src/tools/: __init__.py  cost_calculator.py  github_search.py  web_search.py
backend/tests/: conftest.py  test_api_chat.py  test_cost_calculator.py  test_database_url_ssl.py  test_db_session_url.py  test_health.py  test_llm_openai_schema.py  test_mermaid_sanitize.py  test_phase_ids.py  test_pricing.py  test_schemas.py  test_urls.py
(+115 files in other folders)
